# Secret-Hitler-Telegram-Bot-Statistic-Collector

./: .gitignore  Dockerfile  README.md  Visualisation.ipynb  action.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yaml  docker-compose.yml  example.db  pyproject.toml  visualisation.py
.github/workflows/: action.yml  build_and_deploy.yml  deploy.yml  develop.yml
database/: init.sql
src/: __main__.py  config.py  db.py  exceptions.py  get_handlers.py  utils.py  visualisation.py
src/callbacks/: poll_callback_receiver.py  receive_poll_answer.py
src/data_models/: Game.py  Player.py  Playroom.py  Poll.py  PollResult.py  Record.py
src/handlers/: __init__.py  error_handler.py  game.py  help.py  mystats.py  save.py  start.py  statistics.py
src/services/: db_service.py  draw_graphs.py  draw_result_image.py
src/sql/: init.sql
